styles.css
.tac-card,
.tac-container {
    transition: all .5s;
}

.tac-container .activity-basis .align-self-start.flex-md-row {
    flex-direction: column!important;
}

li.section.tac-container {
    border: none;
}

li.section.tac-container .section-inner-wrapper {
    border-radius: .5rem;
    border: 1px solid #dee2e6;
}
.tac-card-img {
    height: 150px;
    background-size: cover;
    background-position: center;
}
.tac-card-duration-circle {
    height: 3.5rem;
    width: 3.5rem;
    line-height: 1;
}

/* Tags & Availability - normalise styles. */
.tac-card-tags b  {
    font-weight: normal;
    font-size: small;
}
.tac-card-tags .badge {
    background: #d9dde0;
    color: #212529;
}

.tac-container.section .card-content-wrapper {
    padding: 1.5rem;
}

.topicsactivitycards .course-content-item-content ul.section {
    display: flex!important;
    flex-wrap: wrap;
}

